vlib/v/checker/tests/comptime_field_name_not_exist.vv
@[foo: 123]
@[bar]
fn abc() {
}

fn main() {
        mut c := 0
        $for f in abc.attributes {
                $if f.has_xdargfdsafsdfx {
                        c++
                        println('has_arg')
                }
        }
        assert c == 0
}

